@@ -33,6 +33,7 @@ namespace http
 		{
 
             char* rqbuf = NULL;
+            bool own_exec_mtx=false;
 
 			while (1)
 			{
@@ -96,7 +97,8 @@ namespace http
                                 trq->uid = i;
                                 trq->sender = http::connected[i];
                                 http::ulock[i] = true;
-                                pthread_mutex_lock(http::mtx_exec);
+                                if(!own_exec_mtx)pthread_mutex_lock(http::mtx_exec);
+                                own_exec_mtx = false;
                                 http::toexec.push(trq);
                                 pthread_mutex_unlock(http::mtx_exec);
 							}
@@ -116,6 +118,12 @@ namespace http
 					}
 				}
 				utils::sleep(1);
+
+				if(http::toexec.size() <= 0 && !own_exec_mtx)
+				{
+                    pthread_mutex_lock(http::mtx_exec);
+                    own_exec_mtx = true;
+				}
 			}
 		}
 	}
