@@ -3,6 +3,8 @@ For more info visit http://nativehttp.org
 
 DEV: 
 -NativeStat - more info on diagrams
+-Better thearding
+-Makefile repaired
 
 0108.13:
 -Stats - Multiple bugs fixed
